change insight theme

--- a/app/src/pages/home/home.html
+++ b/app/src/pages/home/home.html
@@ -25,7 +25,7 @@
       </div>
       -->
 
-    <div class="about">
+    <!-- <div class="about">
       <p>
         <strong>Insight</strong> is an open-source Bitcoin blockchain explorer developed by
         <a href="https://bitpay.com/" target="_blank">BitPay</a>. Insight also provides a complete REST and websocket API, giving developers access to more advanced blockchain
@@ -42,6 +42,7 @@
         <a href="https://code.google.com/p/leveldb/" target="_blank" class="leveldb" title="LevelDB"></a>
         <a href="http://nodejs.org" target="_blank" class="nodejs" title="NodeJs"></a>
       </div>
-    </div>
+    </div> -->
+    
   </div>
 </ion-content>
